@@ -3,6 +3,8 @@ Changes in 0.14.5:
   * make repository-side change set caching less buggy
   * fix config files changing to symlinks
   * allow duplicate items to be specified for erase and update
+  * changeset command allows flavors to be specified
+  * repquery --info shows trove flavor
 
 Changes in 0.14.4:
   * several bugs in the 'cvc update' code paths have been fixed
